--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@capacitor/core": "3.2.5",
     "@capacitor/storage": "^1.2.3",
     "@ionic/angular": "^5.5.2",
+    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
