--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
+  "browser": {
+    "crypto": false
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -19,7 +22,12 @@
     "@angular/platform-browser": "~12.1.1",
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
-    "@capacitor/core": "3.2.5",
+    "@capacitor/android": "3.4.0",
+    "@capacitor/app": "1.1.0",
+    "@capacitor/core": "3.4.0",
+    "@capacitor/haptics": "1.1.4",
+    "@capacitor/keyboard": "1.2.1",
+    "@capacitor/status-bar": "1.0.7",
     "@capacitor/storage": "^1.2.3",
     "@ionic/angular": "^5.5.2",
     "bcrypt": "^5.0.1",
@@ -38,7 +46,7 @@
     "@angular/compiler": "~12.1.1",
     "@angular/compiler-cli": "~12.1.1",
     "@angular/language-service": "~12.0.1",
-    "@capacitor/cli": "3.2.5",
+    "@capacitor/cli": "3.4.0",
     "@ionic/angular-toolkit": "^4.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
